# binstall-extra-fixture

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
